--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ dependencies = [
     "beautifulsoup4==4.14.3",
     "qdrant-client==1.16.1",
     "sentence-transformers==5.1.2",
+    "pyarrow==22.0.0",
+    "pandas==2.3.3",
+    "feedparser==6.0.12",
+    "tqdm==4.67.1",
+    "torch==2.9.1", # To support GPU acceleration, need to install with CUDA support
 ]
 
 [project.optional-dependencies]
