--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ Hypothesis:
 
 
 Model:
-  name: "meta-llama/Llama-4-Scout-17B-16E-Instruct" # "google/gemma-3-27b-it" # "openai/gpt-oss-120b" # 
+  name: "openai/gpt-oss-120b"
   temperature: 0.5
   timeout: 30
   max_retries: 7
